css modified and blog.html added

--- a/style.css
+++ b/style.css
@@ -58,3 +58,18 @@ a:link {
 p{
     margin: 20px;
 }
+
+.blog-post{
+   margin:10px;
+   background-color: #ffffff;
+   border-color: lightgray;
+   padding:10px;
+   border-radius: 5px;
+
+}
+
+.blog-post img{
+    float: left;
+    margin-right: 10px;
+    margin-bottom:10px;
+}
